--- a/bike-app-frontend/src/components/station.css
+++ b/bike-app-frontend/src/components/station.css
@@ -5,3 +5,13 @@
 .station-title {
     padding: 20px;
 }
+.station-link a {
+    color: black;
+    text-decoration: none;
+}
+.station-link :hover{
+    color: blueviolet;
+}
+.five-stats {
+    background-color: rgb(229, 229, 229);
+}
