--- a/bike-app-frontend/src/components/station.css
+++ b/bike-app-frontend/src/components/station.css
@@ -1,3 +1,8 @@
+.station-back {
+    background-color: rgb(35, 34, 34);
+    color: white;
+}
+
 .station-flex {
     
 }
@@ -13,5 +18,5 @@
     color: blueviolet;
 }
 .five-stats {
-    background-color: rgb(229, 229, 229);
+    background-color: rgb(140, 190, 178);
 }
