--- a/bike-app-frontend/src/components/station.css
+++ b/bike-app-frontend/src/components/station.css
@@ -1,6 +1,8 @@
 .station-back {
     background-color: rgb(35, 34, 34);
     color: white;
+    margin-top: -63px;
+    padding-top: 5.8rem;
 }
 
 .station-flex {
@@ -9,6 +11,7 @@
 
 .station-title {
     padding: 20px;
+    font-size: 39px;
 }
 .station-link a {
     color: black;
