--- a/bike-app-frontend/src/components/station.css
+++ b/bike-app-frontend/src/components/station.css
@@ -24,7 +24,7 @@
     background-color: rgb(140, 190, 178);
 }
 @media (max-width: 773px) {
-    .navvbar {
+    .navbar {
         background-color: none;
 
     }
